--- a/more.html
+++ b/more.html
@@ -55,8 +55,8 @@
  <aside id="side">
      <div class="darks">
        <h3>Send Us A Message</h3>
-       <!-- <form class="quote" action="sendmail.php" method="post"></form> -->
-       <form class="quote" action="mailto:aspirdanielle@gmail.com" method="post" enctype="text/plain" >
+       <form class="quote" action="sendmail.php" method="post"></form>
+       <!-- <form class="quote" action="mailto:aspirdanielle@gmail.com" method="post" enctype="text/plain" > -->
          <div>
            <label>Name</label><br>
            <input type="text" name="Name" required>
