--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
              <li><a href="index.html">My Playlist</a></li>
              <li><a href="about.html">QR code</a></li>
               <li><a href="#sidebar">Q&A</a></li>
-              <li><a href="more.html.#newsletter">Contact Me</a></li>
+              <li><a href="more.html#newsletter">Contact Me</a></li>
             </ul>
           </nav>
             <div id="like">
@@ -51,14 +51,15 @@
           Whether I am working in my garden, spending time with my family and friends, or engaging in my favorite hobbies and activities, I always find joy in the simple things. I am a true inspiration to all who know me, and my love of life and passion for making a difference are truly infectious.
           </p>
           <p class="dark">
-            ההבדלים המשמעותיים בין דפי האינטרנט השונים הם בעיקר בטכנולוגיות. האתר הראשון הוא בעל טכנולוגיה ישנה ופשוטה, ונוצר על ידי מספר מועט של אנשים. האתר השני מאפשר למשתמש להגיב ולהשתתף ברשתות חברתיות למשל להתייעץ על רכישת תרופה, כמו כן יש בו טכנולוגיות חדשות יותר. האתר השלישי מכיל טכנולוגיות מתקדמות יותר על ידי החזקת טבלאות מידע לדוגמה מאפשר רכישת תרופות והתייעצות עם רופאים. ההבדלים הללו משקפים את התפתחות הטכנולוגיה במהלך השנים ואת ההתאמה של האתרים לצרכי המשתמשים.
-          </p>
+            ההבדלים בין האתר הראשון השני והשלישי היו בעיקר בטכנולוגיות. האתר הראשון היה מיועד רק לצפייה ונוצר על ידי מספר מועט של אנשים, ולכן היה בעל טכנולוגיה ישנה ופשוטה. האתר השני, בנוסף לאפשרות לצפות בתוכן, כבר מאפשר למשתמשים ליצור אינטראקציה חברתית ולהגיב על התוכן. האתר השלישי הוא אתר דינמי שמכיל טבלאות מידע ואפשרות לבצע רכישות ולבצע פעולות נוספות.
+            כדי לתאר את תהליך רכישת תרופה באינטרנט בצורה מסודרת יותר, ניתן להשתמש בדוגמה הבאה. עבור משתמש המחפש לרכוש תרופה, האתר הראשון יספק לו מידע בסיסי על התרופה, אך לא יאפשר לו לבצע רכישה או ליצור קשר עם רופא. האתר השני, יאפשר למשתמש ליצור אינטראקציה עם רופא, לקבל מידע נוסף על התרופה ולרכוש אותה. האתר השלישי יספק למשתמש בנוסף אפשרויות נוספות כמו בדיקת מלאי של התרופה, השוואת מחירי התרופה במקומות שונים וקנייתה באתר. 
+                      </p>
         </article>
 
         <aside id="sidebar">
           <div class="dark">
             <h3>QR code</h3>
-            <img src ="img\qrCode.jpg" width="250" height="250" >
+            <img src ="img\qrcode_web-development-environments-2023.github.io.png" width="250" height="250" >
             
             <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec varius auctor lacus nec feugiat. Phasellus sit amet ex ipsum. Praesent pharetra tincidunt tempor. Etiam velit eros, dapibus eget porta in, lacinia et magna</p> -->
           </div>
