--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
          <li><a href="more.html">My Photos</a></li>
          <li><a href="index.html">My Playlist</a></li>
          <li><a href="about.html">QR code</a></li>
-         <li><a href="about.html.#sidebar">Q&A</a></li>
-         <li><a href="more.html.#newsletter">Contact Me</a></li>
+         <li><a href="about.html#sidebar">Q&A</a></li>
+         <li><a href="more.html#newsletter">Contact Me</a></li>
        </ul>
      </nav>
      <div id="like">
