--- a/more.html
+++ b/more.html
@@ -52,30 +52,25 @@
 
  <aside id="side">
      <div class="darks">
-       <h3>Send Us A Message</h3>
+       <h3>Send Me A Message</h3>
        <!-- <form class="quote" action="sendmail.php" method="post"></form> -->
        <form class="quote" action="mailto:aspirdanielle@gmail.com" method="post" enctype="text/plain" >
          <div>
            <label>Name</label><br>
            <input type="text" name="Name" required>
          </div>
-         <div>
+         <!-- <div>
            <label>Email</label><br>
            <input type="email" name="Emial Address" required>       
-         </div>
-         <div>
+         </div> -->
+         <!-- <div id="massage" class="active"> -->
           <label>Message</label><br>
-          <input type="Message" name="Message">
-          <button type="button" id="emoji" on click=addE()>😀</button>
-          <button type="button" id="emoji" on click=addE()>😊</button>
-          <button type="button" id="emoji" on click=addE()>❤️</button>
-          <button type="button" id="emoji" on click=addE()>🔥</button>
-        </div>
+          <textarea id="message" class="message"></textarea >
+          <!-- <button type="button" id="emoji" onclick=addE(this.innerhtml)>😀</button> -->
+          <script type="text/javascript" src="btn.js"></script>
+         </div>
         <button class="button_1" type="submit">Send</button>
        </form>
-    
-    
-
      </div>
    </aside>
  </div>
@@ -104,4 +99,3 @@
        </script>
   </body>
 </html>
-<!-- 1@34qwer1@34 -->
