--- a/more.html
+++ b/more.html
@@ -20,7 +20,7 @@
              <li class="current"><a href="more.html">My Photos</a></li>
              <li><a href="index.html">My Playlist</a></li>
              <li><a href="about.html">QR code</a></li>
-             <li><a href="about.html.#sidebar">Q&A</a></li>
+             <li><a href="about.html#sidebar">Q&A</a></li>
              <li><a href="#newsletter">Contact Me</a></li>
            </ul>
          </nav>
